2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (caps_set), (parse_stream_info),
	(get_list_of_type), (bacon_video_widget_get_current_frame):
	  Fix some logic errors.

2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (parse_stream_info),
	(fixate_visualization):
	  Refix visualization...

2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (parse_stream_info),
	(get_list_of_type), (bacon_video_widget_get_current_frame):
	  Add some more safety guards.

2005-01-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2005-01-25  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_tv_out):
	set the right TV system (PAL/SECAM) (patch from Mattias Eriksson
	<snaggen@acc.umu.se>)

2005-01-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (parse_stream_info),
	(get_list_of_type), (bacon_video_widget_get_current_frame):
	  Copy lists to decreases the theoretical change on crashing while
	  we're switching groups.

2005-01-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
	(group_switch), (parse_stream_info), (stream_info_set),
	(state_change), (bacon_video_widget_new):
	  Notify delayed stream-information availability.

2005-01-25  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_tv_out):
	For all the supported TV-Out types, we don't need a restart
	* src/totem-preferences.c: (on_tvout_toggled): don't hard-code
	dxr3 needing a restart

2005-01-25  Mattias Eriksson <snaggen@acc.umu.se>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-preferences.c: (on_tvout_toggled):
	  Only show warning if switching to DXR3, since it's not true for
	  NVTV.
