@@ -1,3 +1,11 @@
+2005-01-29  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c: (load_video_out_driver),
+	(load_audio_out_driver), (bacon_video_widget_realize),
+	(bacon_video_widget_new), (bacon_video_widget_can_set_volume):
+	use the none audio and video drivers so that the decoders are used
+	and can set metadata (Closes: #165483)
+
 2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/bacon-video-widget-gst.c: (caps_set), (parse_stream_info),
